<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layoutCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/businessName"
            android:text="@string/business_name"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
        <ImageView
            android:id="@+id/logo"
            android:layout_width="500dp"
            android:layout_height="250dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/company_logo"
            android:visibility="visible"/>
        <TextView
            android:id="@+id/businessDescription"
            android:layout_width="500dp"
            android:layout_height="250dp"
            android:layout_marginTop="16dp"
            android:text="@string/business_description"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:visibility="gone"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/businessAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/addressFirstLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_first_line"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/addressSecondLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_second_line"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/workingHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/working_hours"
            android:textColor="@color/black"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/phoneAndEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/telephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telephone"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:textColor="@color/black"
            android:textSize="16sp"/>

    </LinearLayout>




</RelativeLayout>